Стилизация списка отелей на странице hotels

--- a/css/style.css
+++ b/css/style.css
@@ -1,278 +1,426 @@
 :root {
-    --basic-white: #ffffff;
-    --basic-light-gray: #F2F2F2;
-    --basic-gray: #888888;
-    --light-gray:#BDBBBC;
-    --basic-very-light-gray: #EEEEEE;
-    --basic-dark-gray: #333333;
-    --basic-black: #000000;
-    --black:#231F20;
-    --basic-blue: #81B3D2;
-    --basic-dark-blue: #669EC0;
-    ;
-    --basic-very-dark-blue: #5496BD;
-    --basic-opacity-black: rgba(0, 0, 0, 0.3);
-    --basic-opacity-white: rgba(255, 255, 255, 0.9);
-    --basic-big-opacity-white: rgba(255, 255, 255, 0.3);
-    --basic-brown: #766357;
-    --basic-dark-brown: #604E43;
-    --basic-very-dark-brown: #503E33;
-
+  --basic-white: #ffffff;
+  --basic-light-gray: #F2F2F2;
+  --basic-gray: #888888;
+  --light-gray: #BDBBBC;
+  --medium-gray: #CACACA;
+  --basic-very-light-gray: #EEEEEE;
+  --basic-dark-gray: #333333;
+  --basic-black: #000000;
+  --black: #231F20;
+  --basic-blue: #81B3D2;
+  --basic-dark-blue: #669EC0;
+  ;
+  --basic-very-dark-blue: #5496BD;
+  --basic-opacity-black: rgba(0, 0, 0, 0.3);
+  --basic-opacity-white: rgba(255, 255, 255, 0.9);
+  --basic-big-opacity-white: rgba(255, 255, 255, 0.3);
+  --basic-brown: #766357;
+  --basic-dark-brown: #604E43;
+  --brown: #666666;
+  --basic-very-dark-brown: #503E33;
+  --basic-font-family: 'PT Sans', sans-serif;
 }
 
 .page-body {
-    background-color: var(--basic-light-gray);
+  background-color: var(--basic-light-gray);
 }
 
 .page-container {
-    min-width: 1200px;
-    font-family: 'PT Sans', sans-serif;
-    font-size: 14px;
-    font-weight: 21px;
-    font-weight: 400;
-    color: var(--basic-black);
-    box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
-    text-transform: uppercase;
-    background-color: var(--basic-white);
-    background-position: top center;
-    background-repeat: no-repeat;
+  min-width: 1200px;
+  font-family: var(--basic-font-family);
+  font-size: 14px;
+  font-weight: 21px;
+  font-weight: 400;
+  color: var(--basic-black);
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+  text-transform: uppercase;
+  background-color: var(--basic-white);
+  background-position: top center;
+  background-repeat: no-repeat;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 
 /* Main navigation */
 
 .main-navigation {
-    width: 1200px;
-    height: 56px;
-    background-color: var(--basic-white);
+  width: 1200px;
+  height: 56px;
+  background-color: var(--basic-white);
 }
 
 .site-navigation {
-    list-style: none;
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 26px;
-    text-transform: uppercase;
+  list-style: none;
+  font-family: var(--basic-font-family);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 
 .site-navigation__link {
-    color: var(--basic-black);
+  color: var(--basic-black);
 }
 
 .site-navigation__link--current {
-    color: var(--basic-brown);
+  color: var(--basic-brown);
 }
 
 .site-navigation__link:hover,
 .site-navigation__link:focus {
-    color: var(--basic-blue);
+  color: var(--basic-blue);
 }
 
 .site-navigation__link:active {
-    color: var(--basic-opacity-black);
+  color: var(--basic-opacity-black);
 }
 
 
 /* Main content */
 
 .description__header {
-    font-family: inherit;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 
 .description__content {
-    font-family: inherit;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 26px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 
 .reasons-list,
 .city-useful-list {
-    list-style: none;
+  list-style: none;
 }
 
 .item-header {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 21px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 21px;
+  text-transform: uppercase;
 }
 
 .item-content,
 .item-number {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 21px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
 }
 
 .reasons-list__item--left,
 .reasons-list__item--right {
-    background-color: var(--basic-blue);
-    color: var(--basic-white);
+  background-color: var(--basic-blue);
+  color: var(--basic-white);
 }
 
 .reasons-list__item--gray {
-    background-color: var(--basic-very-light-gray)
+  background-color: var(--basic-very-light-gray)
 }
 
 .city-useful-list {
-    background-color: var(--basic-white);
+  background-color: var(--basic-white);
 }
 
 .city-useful-list__item .item-header {
-    color: var(--basic-black);
+  color: var(--basic-black);
 }
 
 .city-useful-list__item .item-content {
-    color: var(--basic-dark-gray);
+  color: var(--basic-dark-gray);
 }
 
 .interesting__header {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 24px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 24px;
+  text-transform: uppercase;
 }
 
 .interesting__content {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 21px;
-    text-transform: uppercase;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
 }
 
 .interesting__search {
-    background-color: var(--basic-brown);
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
-    color: var(--basic-white);
-    width: 568px;
-    height: 86px;
-    border: 0;
+  background-color: var(--basic-brown);
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: var(--basic-white);
+  width: 568px;
+  height: 86px;
+  border: 0;
 }
 
 .interesting__search:hover,
 .interesting__search:focus {
-    background-color: var(--basic-dark-brown);
-    outline: none;
+  background-color: var(--basic-dark-brown);
+  outline: none;
 }
 
 .interesting__search:active {
-    background-color: var(--basic-very-dark-brown);
-    outline: none;
-    color: var(--basic-big-opacity-white);
+  background-color: var(--basic-very-dark-brown);
+  outline: none;
+  color: var(--basic-big-opacity-white);
 }
 
 .interesting-form__find {
-    background-color: var(--basic-blue);
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
-    color: var(--basic-white);
-    width: 458px;
-    height: 58px;
-    border: 0;
+  background-color: var(--basic-blue);
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: var(--basic-white);
+  width: 458px;
+  height: 58px;
+  border: 0;
 }
 
 .interesting-form__find:hover,
 .interesting-form__find:focus {
-    background-color: var(--basic-dark-blue);
-    outline: none;
+  background-color: var(--basic-dark-blue);
+  outline: none;
 }
 
 .interesting-form__find:active {
-    background-color: var(--basic-very-dark-blue);
-    outline: none;
-    color: var(--basic-big-opacity-white);
+  background-color: var(--basic-very-dark-blue);
+  outline: none;
+  color: var(--basic-big-opacity-white);
+}
+
+.map {
+  background-image: url(img/map.jpg);
+}
+
+
+/* Hotels. Main content*/
+
+.sorting {
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+
+.sorting__result-text {
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.sorting a {
+  color: inherit;
+  border-bottom: dotted;
+  opacity: 0.3;
+  border-color: var(--basic-blue);
+}
+
+.sorting a:hover,
+.sorting a:focus {
+  color: var(--basic-blue);
+  opacity: 1;
+}
+
+.sorting a:active {
+  color: var(--basic-black);
+  opacity: 1;
+  border-bottom: none;
+}
+
+.sorting .sorting__asc,
+.sorting .sorting__dsc {
+  border-bottom: none;
+  color: var(--medium-gray);
+  opacity: 1;
+}
+
+.sorting .sorting__asc:hover,
+.sorting .sorting__dsc:hover,
+.sorting .sorting__asc:focus,
+.sorting .sorting__dsc:focus {
+  border-bottom: none;
+  color: var(--basic-black);
+}
+
+.sorting .sorting__asc:active,
+.sorting .sorting__dsc:active {
+  border-bottom: none;
+  color: var(--basic-blue);
+}
+
+.sorting .active {
+  color: var(--basic-blue);
+  opacity: 1;
+  border-bottom: none;
+}
+
+.hotels-item__name {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+
+.hotels-item__type {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--basic-dark-gray);
+}
+
+.hotels-item__detail {
+  width: 110px;
+  height: 27px;
+  background-color: var(--basic-blue);
+  font-weight: bold;
+  font-size: 14px;
+  /* line-height: 21px;*/
+  line-height: 27px;
+  color: var(--basic-white);
+  display: inline-block;
+  text-align: center
+}
+
+.hotels-item__detail:hover,
+.hotels-item__detail:focus {
+  background-color: var(--basic-dark-blue);
+}
+
+.hotels-item__detail:active {
+  background-color: var(--basic-very-dark-blue);
+  color: var(--basic-big-opacity-white);
+}
+
+.hotels-item__reserv {
+  width: 142px;
+  height: 27px;
+  background-color: var(--basic-brown);
+  font-weight: bold;
+  font-size: 14px;
+  /*line-height: 21px;*/
+  line-height: 27px;
+  color: var(--basic-white);
+  display: inline-block;
+  text-align: center
+}
+
+.hotels-item__reserv:hover,
+.hotels-item__reserv:focus {
+  background-color: var(--basic-dark-brown);
+}
+
+.hotels-item__reserv:active {
+  background-color: var(--basic-very-dark-brown);
+  color: var(--basic-big-opacity-white);
+}
+
+.hotels-item__rating {
+  width: 110px;
+  height: 27px;
+  background-color: var(--basic-light-gray);
+  font-weight: normal;
+  font-size: 14px;
+  /*line-height: 21px;*/
+  line-height: 27px;
+  color: var(--brown);
+  display: inline-block;
+  text-align: center;
 }
 
 
 /* Footer */
 
 .main-footer {
-    width: 1200px;
-    height: 120px;
-    background-color: var(--basic-opacity-white);
+  width: 1200px;
+  height: 120px;
+  background-color: var(--basic-opacity-white);
 }
 
 .main-footer__contacts {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
-    color: var(--basic-black)
+  font-family: inherit;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: var(--basic-black);
 }
 
 .contacts__link {
-    color: var(--basic-black);
+  color: var(--basic-black);
 }
 
 .social__list {
-    list-style: none;
+  list-style: none;
 }
 
 .social__link {
-    background-color: var(--basic-blue);
+  background-color: var(--basic-blue);
 }
 
 .developer__content {
-    font-family: PT Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 26px;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
 }
-.developer__logo{
+
+.developer__logo {
   fill: var(--black);
 }
-.developer__link:hover .developer__logo{
+
+.developer__link:hover .developer__logo {
   fill: var(--basic-blue);
 }
 
-.developer__link:focus .developer__logo{
+.developer__link:focus .developer__logo {
   fill: var(--basic-blue);
 }
 
-.developer__link:active .developer__logo{
+.developer__link:active .developer__logo {
   fill: var(--light-gray);
 }
