Добавлена JS карта+ небольшие правки
1) добавление js карта
2) ссылка на htmlacademy  0 сделано открытие в новом окне
3) index.html - изменён цвет бэкграунда для постера, чтобы были видны буквы, наложенные поверх если картинка не загрузится

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ img {
 /* Main content */
 
 .poster {
-  background-color: var(--basic-blue);
+  background-color: var(--medium-gray);
   background-image: url(../img/sedona.jpg);
   text-align: center;
   height: 509px;
@@ -232,6 +232,11 @@ img {
 .map-container {
   background-color: var(--basic-very-light-gray);
   background-image: url(../img/map.jpg);
+}
+
+.map {
+  width: 100%;
+  height: 473px;
 }
 
 
