--- a/css/style.css
+++ b/css/style.css
@@ -80,22 +80,20 @@ img {
   list-style: none;
   font-weight: bold;
   line-height: 26px;
-  margin: 0 72px;
+  margin: 0;
   padding: 0;
-  display: grid;
-  grid-column-gap: 144px;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.site-navigation__item:nth-child(3) {
-  grid-column-start: 4;
-  grid-column-end: 5;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .site-navigation__item {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 72px;
   min-width: 100px;
+  max-width: 180px;
+}
+
+.site-navigation__item:nth-child(3) {
+  margin-left: auto;
 }
 
 .site-navigation__link {
@@ -143,7 +141,7 @@ img {
 .reasons-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .reasons-list li:nth-of-type(1),
