--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,8 @@ img {
   width: 1200px;
   height: 120px;
   background-color: var(--basic-opacity-white);
+  display: flex;
+  justify-content: space-around;
 }
 
 .contacts {
