footer прижат к низу

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@
   --font-size-extra-big: 30px;
 }
 
+.page {
+  height: 100%;
+}
+
 .page-body {
   background-color: var(--basic-light-gray);
   font-family: var(--font-family-basic);
@@ -37,6 +41,7 @@
   font-weight: normal;
   color: var(--basic-black);
   text-transform: uppercase;
+  height: 100%;
 }
 
 .page-container {
@@ -49,6 +54,7 @@
   background-repeat: no-repeat;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
+  min-height: 100%;
 }
 
 a {
